welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:7: error: ';' expected but 'if' found.
  } if (b==c) {
    ^